--- a/songs.html
+++ b/songs.html
@@ -2,76 +2,9 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>เลือกเพลง YouTube</title>
-  <style>
-    body {
-      font-family: 'Sarabun', sans-serif;
-      background: linear-gradient(135deg, #1e1e1e, #121212);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 30px;
-      min-height: 100vh;
-      box-sizing: border-box;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    button {
-      background: linear-gradient(45deg, #34ace0, #33d9b2);
-      border: none;
-      border-radius: 12px;
-      padding: 12px 20px;
-      margin: 10px;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: linear-gradient(45deg, #2c99cc, #28b999);
-    }
-    iframe {
-      margin-top: 30px;
-      width: 90vw;
-      max-width: 600px;
-      height: 340px;
-      border: none;
-      border-radius: 12px;
-    }
-    .back-btn {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-    }
-    .back-btn img {
-      width: 50px;
-    }
-    .exit-fullscreen {
-      margin-top: 15px;
-      background: #ff5e57;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-      padding: 10px 20px;
-      font-size: 1rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-    .video-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>เลือกเพลงที่ต้องการฟัง</h1>
@@ -87,10 +20,23 @@
     <button class="exit-fullscreen" onclick="exitFullScreen()">⛶ ออกจากโหมดเต็มหน้าจอ</button>
   </div>
 
-  <!-- ปุ่มกลับหน้า index -->
   <button class="back-btn" onclick="window.location.href='index.html'">
     <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="กลับ" />
   </button>
 
   <script>
-    function loadVideo(videoId)
+    function loadVideo(videoId) {
+      const player = document.getElementById('ytPlayer');
+      player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+    }
+
+    function exitFullScreen() {
+      if (document.fullscreenElement) {
+        document.exitFullscreen();
+      } else if (window.innerHeight == screen.height) {
+        alert("เบราว์เซอร์ของคุณอาจไม่รองรับการออกจากโหมด fullscreen ด้วย script นี้ กรุณาใช้ปุ่มย้อนกลับของระบบแทน");
+      }
+    }
+  </script>
+</body>
+</html>
