--- a/average.html
+++ b/average.html
@@ -8,14 +8,15 @@
 </head>
 <body>
   <canvas id="particles"></canvas>
-  <main class="result-container" role="main">
-    <img id="resultImage" src="" alt="" />
-    <div id="avgResult" aria-live="polite">กำลังโหลด...</div>
-    <div class="message" id="messageText"></div>
-  </main>
 
-  <div id="homeBtn" class="floating-btn" title="กลับหน้าหลัก" role="button" tabindex="0" onclick="window.location.href='index.html'">🏠</div>
-  <div id="fullscreenBtn" class="floating-btn" title="แสดงผลเต็มจอ" role="button" tabindex="0" onclick="toggleFullscreen()">📱</div>
+  <div class="container average-container">
+    <img id="resultImage" src="" alt="" />
+    <div id="avgResult">กำลังโหลด...</div>
+    <div class="message" id="messageText"></div>
+
+    <button id="fullscreenBtn" class="floating-btn" onclick="openFullscreen()">📱</button>
+    <button id="homeBtn" class="floating-btn" onclick="window.location.href='index.html'">🏠</button>
+  </div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -27,37 +28,37 @@
     if (!isNaN(result)) {
       avgEl.innerText = `ค่าเฉลี่ยออเดอร์ต่อวัน: ${result.toFixed(8)}`;
 
-      if (result >= 12.0) {
+      if (result >= 12.00) {
         const options = [
           { img: "1(10).png", text: "ก็ทำได้หนิหว่า มา!! ชนแก้ว !!" },
           { img: "1 (2).png", text: "เป็นคนดีนี้น่า" }
         ];
         const choice = options[Math.floor(Math.random() * options.length)];
         imgEl.src = choice.img;
-        imgEl.alt = choice.text;
         msgEl.innerText = choice.text;
       } else {
         imgEl.src = "1 (1).png";
-        imgEl.alt = "ดีขึ้นให้ได้นะ";
         msgEl.innerText = "ดีขึ้นให้ได้นะ";
       }
     } else {
       avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
-      imgEl.src = "";
-      imgEl.alt = "";
-      msgEl.innerText = "";
     }
 
-    function toggleFullscreen() {
-      if (!document.fullscreenElement) {
-        document.documentElement.requestFullscreen().catch(() => {});
-        screen.orientation.lock('landscape').catch(() => {});
-      } else {
-        document.exitFullscreen().catch(() => {});
+    function openFullscreen() {
+      const docElm = document.documentElement;
+      if (docElm.requestFullscreen) {
+        docElm.requestFullscreen();
+      } else if (docElm.mozRequestFullScreen) {
+        docElm.mozRequestFullScreen();
+      } else if (docElm.webkitRequestFullscreen) {
+        docElm.webkitRequestFullscreen();
+      } else if (docElm.msRequestFullscreen) {
+        docElm.msRequestFullscreen();
       }
+      screen.orientation.lock('landscape').catch(() => {});
     }
 
-    // Particle effect code
+    // particle effect
     const canvas = document.getElementById("particles");
     const ctx = canvas.getContext("2d");
     let w, h;
