--- a/index.html
+++ b/index.html
@@ -2,29 +2,27 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>คำนวณค่าเฉลี่ย MU และ SKU</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>เครื่องคำนวณค่าเฉลี่ย</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>คำนวณค่าเฉลี่ย MU และ SKU</h1>
-    <form id="calcForm">
-      <label for="sku">รวมจำนวน SKU:</label>
-      <input type="number" id="sku" name="sku" min="0" required />
 
-      <label for="mu">รวมจำนวน MU:</label>
-      <input type="number" id="mu" name="mu" min="0" required />
+    <label for="sku">จำนวน SKU:</label>
+    <input type="number" id="sku" placeholder="เช่น 120">
 
-      <label for="days">จำนวนวัน:</label>
-      <input type="number" id="days" name="days" min="1" required />
+    <label for="mu">จำนวน MU:</label>
+    <input type="number" id="mu" placeholder="เช่น 70">
 
-      <button type="submit">คำนวณ</button>
-    </form>
+    <label for="days">จำนวนวันที่ทำงาน:</label>
+    <input type="number" id="days" placeholder="เช่น 7">
 
-    <div id="resultDisplay" class="result"></div>
+    <button onclick="calculate()">แสดงผลเต็มหน้าจอ</button>
 
-    <button id="goAverage" disabled>ไปยังหน้าค่าเฉลี่ย</button>
+    <!-- ปุ่มเป็ดไปหน้า songs -->
+    <div class="floating-duck" onclick="window.location.href='songs.html'">🦆</div>
   </div>
 
   <footer>
