--- a/index.html
+++ b/index.html
@@ -2,39 +2,54 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เครื่องคำนวณค่าเฉลี่ย</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>หน้าแรก - คำนวณค่าเฉลี่ย MU และ SKU</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="background-blur"></div>
   <div class="container">
-    <h1>คำนวณค่าเฉลี่ย MU และ SKU</h1>
 
-    <label for="sku">จำนวน SKU:</label>
-    <input type="number" id="sku" placeholder="เช่น 120">
+    <header>
+      <h1>คำนวณค่าเฉลี่ย MU และ SKU</h1>
+    </header>
 
-    <label for="mu">จำนวน MU:</label>
-    <input type="number" id="mu" placeholder="เช่น 70">
+    <main>
+      <form id="calcForm">
+        <label for="sku">จำนวน SKU (sku):</label>
+        <input type="number" id="sku" name="sku" min="0" required />
 
-    <label for="days">จำนวนวันที่ทำงาน:</label>
-    <input type="number" id="days" placeholder="เช่น 7">
+        <label for="mu">จำนวน MU (mu):</label>
+        <input type="number" id="mu" name="mu" min="0" required />
 
-    <button onclick="calculate()">แสดงผลเต็มหน้าจอ</button>
+        <label for="days">จำนวนวัน (days):</label>
+        <input type="number" id="days" name="days" min="1" required />
 
-    <!-- ปุ่มเป็ดไปหน้า songs -->
-    <div class="floating-duck" onclick="window.location.href='songs.html'">🦆</div>
+        <button type="button" id="calcBtn">คำนวณค่าเฉลี่ย</button>
+      </form>
+
+      <div id="result"></div>
+
+      <div class="button-row">
+        <button id="goFullScreenBtn">แสดงผลเต็มหน้าจอ</button>
+        <button id="exitFullScreenBtn" style="display:none;">ออกจากเต็มหน้าจอ</button>
+        <button id="toAverageBtn" disabled>ไปยังหน้าค่าเฉลี่ย</button>
+        <button id="toSongsBtn" title="เลือกเพลง" class="floating-duck-btn">🦆</button>
+      </div>
+    </main>
+
+    <footer>
+      <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
+      <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
+      <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
+      <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
+      <p>พัฒนาโดย Jack Makro © 2025</p>
+      <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
+      <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
+      <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
+    </footer>
+
   </div>
-
-  <footer>
-    <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
-    <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
-    <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
-    <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
-    <p>พัฒนาโดย Jack Makro © 2025</p>
-    <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
-    <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
-    <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
-  </footer>
 
   <script src="script.js"></script>
 </body>
