--- a/songs.html
+++ b/songs.html
@@ -4,113 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>เลือกเพลง YouTube</title>
-  <style>
-    body {
-      font-family: 'Sarabun', sans-serif;
-      background: linear-gradient(135deg, #1e1e1e, #121212);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 30px;
-      min-height: 100vh;
-      box-sizing: border-box;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background: linear-gradient(45deg, #34ace0, #33d9b2);
-      border: none;
-      border-radius: 12px;
-      padding: 12px 20px;
-      margin: 10px;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: linear-gradient(45deg, #2c99cc, #28b999);
-    }
-
-    iframe {
-      margin-top: 30px;
-      width: 90vw;
-      max-width: 600px;
-      height: 340px;
-      border: none;
-      border-radius: 12px;
-    }
-
-    .back-btn {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-    }
-
-    .back-btn img {
-      width: 50px;
-    }
-
-    .exit-fullscreen {
-      margin-top: 15px;
-      background: #ff5e57;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-      padding: 10px 20px;
-      font-size: 1rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-
-    .video-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>เลือกเพลงที่ต้องการฟัง</h1>
+  <div class="background-blur"></div>
+  <div class="container">
 
-  <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
-  <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
-  <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
-  <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
-  <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
+    <h1>เลือกเพลงที่ต้องการฟัง</h1>
 
-  <div class="video-container">
-    <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
-    <button class="exit-fullscreen" onclick="exitFullScreen()">⛶ ออกจากโหมดเต็มหน้าจอ</button>
+    <div class="song-buttons">
+      <button onclick="loadVideo('Jl2GVV5OYfY')">ถ้าคิดถึงเธอมากกว่านี้ x Pimthitiii</button>
+      <button onclick="loadVideo('yqpmX4eOCHo')">หมากเกมนี้ - อินคา [Cover By สมอารมณ์ x Pimthitiii]</button>
+      <button onclick="loadVideo('HtsXPgf830k')">苏慕遮</button>
+      <button onclick="loadVideo('nNZ5C30d6EE')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก</button>
+      <button onclick="loadVideo('VRVFAHidHm8')">Aunchi | เมดเลย์เพลงผู้หญิงอกหัก(Rock) EP.2</button>
+    </div>
+
+    <div class="video-container">
+      <iframe id="ytPlayer" src="" allowfullscreen allow="autoplay"></iframe>
+    </div>
+
+    <!-- ปุ่มกลับหน้า index -->
+    <button class="back-btn" onclick="window.location.href='index.html'">
+      <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="กลับ" />
+    </button>
+
   </div>
-
-  <button class="back-btn" onclick="window.location.href='index.html'">
-    <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="กลับ" />
-  </button>
 
   <script>
     function loadVideo(videoId) {
       const player = document.getElementById('ytPlayer');
       player.src = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
-    }
-
-    function exitFullScreen() {
-      if (document.fullscreenElement) {
-        document.exitFullscreen();
-      } else if (window.innerHeight === screen.height) {
-        alert("เบราว์เซอร์ของคุณอาจไม่รองรับการออกจากโหมด fullscreen ด้วย script นี้ กรุณาใช้ปุ่มย้อนกลับของระบบแทน");
-      }
     }
   </script>
 </body>
