--- a/index.html
+++ b/index.html
@@ -2,54 +2,33 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>หน้าแรก - คำนวณค่าเฉลี่ย</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>เครื่องคำนวณค่าเฉลี่ย MU และ SKU</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="main-container">
-    <header>
-      <h1>เครื่องมือคำนวณค่าเฉลี่ย MU และ SKU</h1>
-    </header>
+  <div class="bg-blur"></div>
+  <main>
+    <h1>เครื่องคำนวณค่าเฉลี่ย MU และ SKU</h1>
+    <label>จำนวนวัน: <input type="number" id="days" /></label>
+    <label>จำนวน MU: <input type="number" id="mu" /></label>
+    <label>จำนวน SKU: <input type="number" id="sku" /></label>
+    <button onclick="calculate()">คำนวณ</button>
+  </main>
 
-    <form id="calcForm">
-      <label for="skuInput">SKU:</label>
-      <input type="number" id="skuInput" min="0" required />
+  <button class="floating-btn" onclick="toggleFullscreen()">⛶</button>
+  <button class="floating-btn duck" onclick="window.location.href='songs.html'">🦆</button>
 
-      <label for="muInput">MU:</label>
-      <input type="number" id="muInput" min="0" required />
-
-      <label for="daysInput">จำนวนวัน:</label>
-      <input type="number" id="daysInput" min="1" required />
-
-      <button type="submit" id="calcBtn">คำนวณ</button>
-    </form>
-
-    <div id="resultContainer">
-      <p>ค่าเฉลี่ยจะปรากฏที่นี่หลังคำนวณ</p>
-    </div>
-
-    <div class="button-row">
-      <button id="goFullScreenBtn" class="fullscreen-btn">แสดงผลเต็มหน้าจอ</button>
-      <button id="exitFullScreenBtn" class="fullscreen-btn" style="display:none;">ออกจากโหมดเต็มหน้าจอ</button>
-
-      <button id="goToAverageBtn">ดูผลค่าเฉลี่ย</button>
-      <button id="goToSongsBtn" title="เลือกเพลง">
-        <img src="duck.png" alt="เป็ด" class="duck-icon" />
-      </button>
-    </div>
-
-    <footer>
-      <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
-      <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
-      <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
-      <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
-      <p>พัฒนาโดย Jack Makro © 2025</p>
-      <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
-      <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
-      <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
-    </footer>
-  </div>
+  <footer>
+    <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
+    <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย</p>
+    <p>ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง</p>
+    <p>โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว</p>
+    <p>พัฒนาโดย Jack Makro © 2025</p>
+    <p>ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX</p>
+    <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
+    <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
